# serializer version: 1
# name: test_get_cluster[all-namespaces]
  '''
  PATH                      KUSTOMIZATIONS    
  tests/testdata/cluster    4                 
  
  '''
# ---
# name: test_get_cluster[cluster2]
  '''
  PATH                       KUSTOMIZATIONS    
  tests/testdata/cluster2    5                 
  
  '''
# ---
# name: test_get_cluster[cluster3-no-source]
  '''
  PATH                       KUSTOMIZATIONS    
  tests/testdata/cluster3    1                 
  
  '''
# ---
# name: test_get_cluster[cluster3]
  '''
  PATH                       KUSTOMIZATIONS    
  tests/testdata/cluster3    2                 
  
  '''
# ---
# name: test_get_cluster[cluster4]
  '''
  PATH                       KUSTOMIZATIONS    
  tests/testdata/cluster4    3                 
  
  '''
# ---
# name: test_get_cluster[cluster5]
  '''
  PATH                       KUSTOMIZATIONS    
  tests/testdata/cluster5    1                 
  
  '''
# ---
# name: test_get_cluster[cluster6]
  '''
  PATH                       KUSTOMIZATIONS    
  tests/testdata/cluster6    2                 
  
  '''
# ---
# name: test_get_cluster[cluster7]
  '''
  PATH                       KUSTOMIZATIONS    
  tests/testdata/cluster7    3                 
  
  '''
# ---
# name: test_get_cluster[cluster]
  '''
  PATH                      KUSTOMIZATIONS    
  tests/testdata/cluster    4                 
  
  '''
# ---
# name: test_get_cluster[yaml-cluster7-images]
  '''
  ---
  clusters:
  - path: tests/testdata/cluster7
    kustomizations:
    - name: apps
      namespace: flux-system
      path: tests/testdata/cluster7/flux/apps
      helm_repos: []
      helm_releases:
      - name: postgresql
        namespace: database
        chart:
          name: postgresql
          repo_name: bitnami-charts
          repo_namespace: flux-system
      cluster_policies: []
      images: []
    - name: charts
      namespace: flux-system
      path: tests/testdata/cluster7/flux/charts
      helm_repos:
      - name: bitnami-charts
        namespace: flux-system
        url: oci://registry-1.docker.io/bitnamicharts
        repo_type: oci
      helm_releases: []
      cluster_policies: []
      images: []
    - name: flux-system
      namespace: flux-system
      path: tests/testdata/cluster7/clusters/home
      helm_repos: []
      helm_releases: []
      cluster_policies: []
      images: []
  
  '''
# ---
# name: test_get_cluster[yaml]
  '''
  ---
  clusters:
  - path: tests/testdata/cluster
    kustomizations:
    - name: apps
      namespace: flux-system
      path: tests/testdata/cluster/apps/prod
      helm_repos: []
      helm_releases:
      - name: podinfo
        namespace: podinfo
        chart:
          name: podinfo
          repo_name: podinfo
          repo_namespace: flux-system
      cluster_policies: []
      images: []
    - name: flux-system
      namespace: flux-system
      path: tests/testdata/cluster/clusters/prod
      helm_repos: []
      helm_releases: []
      cluster_policies: []
      images: []
    - name: infra-configs
      namespace: flux-system
      path: tests/testdata/cluster/infrastructure/configs
      helm_repos:
      - name: bitnami
        namespace: flux-system
        url: https://charts.bitnami.com/bitnami
        repo_type: default
      - name: podinfo
        namespace: flux-system
        url: oci://ghcr.io/stefanprodan/charts
        repo_type: oci
      - name: weave-charts
        namespace: flux-system
        url: oci://ghcr.io/weaveworks/charts
        repo_type: oci
      helm_releases: []
      cluster_policies:
      - name: test-allow-policy
        namespace: null
      images: []
    - name: infra-controllers
      namespace: flux-system
      path: tests/testdata/cluster/infrastructure/controllers
      helm_repos: []
      helm_releases:
      - name: metallb
        namespace: metallb
        chart:
          name: metallb
          repo_name: bitnami
          repo_namespace: flux-system
      - name: weave-gitops
        namespace: flux-system
        chart:
          name: weave-gitops
          repo_name: weave-charts
          repo_namespace: flux-system
      cluster_policies: []
      images: []
  
  '''
# ---
